AP-4681/fix-window-header-ui-zk9 (#1273)
* Fix misalignment in window/modals headers
* Remove border around modals and messageboxes

--- a/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/common/css/zk.css
+++ b/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/common/css/zk.css
@@ -444,6 +444,7 @@ input[type="radio"]:checked:before {
     padding: 0;
     background-color: white;
     border-radius: 4px;
+    border: 0;
 }
 
 .z-messagebox-window {
@@ -530,10 +531,14 @@ input[type="radio"]:checked:before {
 .z-window-header .z-caption-content {
     font-family: var(--ap-font-brand);
     vertical-align: top;
+    padding: 0;
 }
 
 .z-window-header .z-toolbarbutton {
     vertical-align: top;
+    overflow: visible;
+    border: 0;
+    padding: 0;
 }
 
 .z-window-header .z-toolbarbutton-content {
@@ -554,6 +559,7 @@ input[type="radio"]:checked:before {
     filter: var(--ap-filter-ico-normal-dark);
 }
 
+.z-window-header .z-toolbarbutton:hover,
 .z-window-header .z-toolbarbutton:hover .z-toolbarbutton-content {
     background-color: transparent;
 }
@@ -564,6 +570,8 @@ input[type="radio"]:checked:before {
     font-size: 14px;
     margin: 0 0 0 7px;
     padding: 0;
+    height: auto;
+    line-height: normal;
 }
 
 /* Paging */
